[package]
name = "battleship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.7.1"
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.95"
#webrtc-unreliable = "0.3"
#futures = "0.3.27"